added listRobotByType
